--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <h4>Dumebi Iwuchukwu</h4>
                 <p>
                   Solving problems and telling visual stories is my big passion. <br>
-                  My medical imaging background makes me think of design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
+                  My medical imaging background makes me think of design in an analytical and human centered way. I seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
                   Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut  Show, McVities Biscuits Nigeria and LAIF Awards.
                 <br>
