--- a/index.html
+++ b/index.html
@@ -231,11 +231,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
-                                <img data-src="images/portfolio/beetle.jpg"
-                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="" class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
+                            <img src="images\portfolio\gallery\cap-front.jpg" alt="dentiti baseball cap" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
@@ -247,13 +243,10 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="#0" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
 
-                        <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </div>
 
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
@@ -262,29 +255,23 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
-                                <img data-src="images/portfolio/salad.jpg"
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="" class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
+                            <img src="images\portfolio\gallery\Dumebi_app_concept_design.jpg" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Salad
+                          Avendator <br>
+                          Coupé
                             </h3>
                             <p class="item-folio__cat">
-                                Branding
+                               IOS UI design
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="#0" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
 
-                        <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </span>
 
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
@@ -294,11 +281,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" data-size="1050x700">
-                                <img data-src="images/portfolio/minimalismo.jpg"
-                                     srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="" class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
+                          <img src="images\portfolio\gallery\kitkat_ad.jpg" alt="KitKat Ad concept design by Dumebi Iwuchukwu" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
@@ -310,13 +293,9 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="#0" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
-
-                        <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </span>
 
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
