--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Minimalismo
+                                KitKat
                             </h3>
                             <p class="item-folio__cat">
-                                Web Design
+                                Ad Concept Design
                             </p>
                         </div>
 
