--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 
             <div class="row home-content__main">
                 <h3>Hello There</h3>
-                 <h1>Imagine a world<br>
-                  where solutions are not Western or Eastern but specific to its particular locale. Where vernacular solutions are designed and implemented in solving local problems.
+                 <h1>I live in a world where solutions are not stereotyped, but are specific to particular needs, where solutions are found at the center of culture, design and technology.
                 </h1>
 
 
@@ -166,10 +165,10 @@
             <div class="col-six tab-full left">
                 <h4>Dumebi Iwuchukwu</h4>
                 <p>
-                  Solving problems and telling visual stories is my big passion. <br>
+                  Solving problems and telling visual stories are my big passion. <br>
                   My medical imaging background makes me think of design in an analytical and human centered way. I seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
-                  Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut  Show, McVities Biscuits Nigeria and LAIF Awards.
+                  Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, McVities Biscuits Nigeria and LAIF Awards.
                 <br>
                   My dream project is to travel the world building  vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
