--- a/blog.html
+++ b/blog.html
@@ -103,22 +103,22 @@
 
                 <div class="page-header__info">
                     <div class="page-header__cat">
-                        <a href="#0">Branding</a><a href="#0">Design</a>
+                        <a href="#0">Culture</a><a href="#0">Design</a>
                     </div>
                     <div class="page-header__date">
-                        Jan 20, 2019
+                        Mar 04, 2019
                     </div>
                 </div>
 
                 <h1 class="page-header__title">
-                    <a href="minimalist_design_love.html" title="Minimalist Design Love" target="_blank">
-                        Minimalist Design Love.
+                    <a href="vernacular_design.html" title="Design of vernacular solutions" target="_blank">
+                        Designing Vernacular Solutions; Where ignorance is bliss
                     </a>
                 </h1>
                 <p>Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication.<br>
                    Minimalism has been around almost as long as...</p>
                 <p>
-                    <a href="minimalist_design_love.html" class="btn btn--stroke page-header__btn" target="_blank">Read More</a>
+                    <a href="vernacular_design.html" class="btn btn--stroke page-header__btn" target="_blank">Read More</a>
                 </p>
             </article>
         </div>
@@ -206,32 +206,19 @@
                         <div class="blog-date">
                             <a href="blog-single.html">Sept 10, 2017</a>
                         </div>
-                        <h2 class="h01"><a href="blog-single.html">Get Started With Web Typography .</a></h2>
+                        <h2 class="h01"><a href="My_YALI_Story_2_enroute_to_ASCON.html">My YALI Story 2..Enroute to ASCON</a></h2>
                         <p>
                           As I alighted from my trekking device (Lag Yellow Cab) my trek coordinator (driver) looking at my boxes, asked as I paid him; “where are you flying to?”<br>
                           I don’t lie. <br>
                           I don’t like being embarrassed either.<br>
-                          Guess what I replied.
-                        c</p>v```1
+                          Guess what I replied....
+                        </p>
                         <div class="blog-cat">
                             <a href="blog.html">Typography</a>
                         </div>
                     </article>
 
-                    <article class="col-block">
 
-                        <div class="blog-date">
-                            <a href="blog-single.html">Sept 08, 2017</a>
-                        </div>
-                        <h2 class="h01"><a href="blog-single.html">Improving Design Layout With Vertical Rhythm.</a></h2>
-                        <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh.
-                        </p>
-
-                        <div class="blog-cat">
-                            <a href="blog.html">Design</a><a href="#0">Web Design</a>
-                        </div>
-                    </article>
 
                 </div> <!-- end blog-list -->
 
