--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="home-content">
 
             <div class="row home-content__main">
-                <h3>Hello There</h3>
-                 <h1>I live in a world where solutions are not stereotyped, but are specific to particular needs, where solutions are found at the center of culture, design and technology.
+
+                 <h1>I believe the best solutions are not stereotyped, but are found at the center of culture, design and technology.
                 </h1>
 
 
@@ -325,10 +325,10 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="minimalist_design_love.html" target="_blank">Jan 20, 2019</a>
+                            <a href="vernacular_design.html" target="_blank">Jan 20, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="minimalist_design_love.html" target="_blank">Minimalist Design Love.</a></h2>
+                        <h2 class="h01"><a href="vernacular_design.html" target="_blank">Designing Vernacular Solutions; Where ignorance is bliss</a></h2>
                         <p>
                           Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as..
                         </p>
