--- a/vernacular_design.html
+++ b/vernacular_design.html
@@ -30,7 +30,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Minimalist Design Love | Dumebi Iwuchukwu</title>
+    <title>Designing Vernacular Solutions; Where ignorance is bliss | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
     <meta name="description" content="This is where I share my insights, findings and experiences.">
@@ -116,14 +116,14 @@
                 <article class="col-full">
                     <div class="page-header__info">
                         <div class="page-header__cat">
-                            <a href="#0">Minimalism</a><a href="#0">Design</a>
+                            <a href="#0">Culture</a><a href="#0">Design</a>
                         </div>
                     </div>
                     <h1 class="page-header__title">
-                    Minimalist Design Love
+              Designing Vernacular Solutions; Where ignorance is bliss
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date">January 20, 2019</li>
+                        <li class="date">March 04, 2019</li>
                         <li class="author">
                             By
                             <span>Dumebi Iwuchukwu</span>
