--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="row home-content__main">
 
-                 <h1>I believe the best solutions are not stereotyped, but are found at the center of culture, design and technology.
+                 <h1>The best solutions are found at the center of culture, design and technology.
                 </h1>
 
 
