--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>More About Me</h1>
+                <h1>Dumebi Iwuchukwu</h1>
                 <p class="lead"> Visual Storyteller, Digital Creative &amp; Tribal Innovator.</p>
             </div>
         </div>
@@ -164,7 +164,6 @@
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h4>Dumebi Iwuchukwu</h4>
                 <p>
                   Solving problems and telling visual stories are my big passion. <br>
                   My medical imaging background makes me think of design in an analytical and human centered way. I seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
@@ -217,7 +216,7 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Portfolio</h3>
-                <h1>See My Latest Projects.</h1>
+                <h1>My Latest Projects.</h1>
 
                 <p class="lead">“You can do anything you set your mind to.” <br>
                                     Benjamin Franklin</p>
