--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                KitKat
+                                Taruwa Festival 2019
                             </h3>
                             <p class="item-folio__cat">
-                                Ad Concept Design
+                               Identity & Communication Design
                             </p>
                         </div>
 
