--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead"> Visual Storyteller, Digital Creative &amp; Tribal Innovator.</p>
+                <p class="lead"> Brand Strategist, Digital Creative &amp; Vernacular Innovator.</p>
             </div>
         </div>
 
@@ -165,19 +165,23 @@
 
             <div class="col-six tab-full left">
                 <p>
-                  Solving problems and telling visual stories are my big passion. <br>
-                  My medical imaging background makes me think of design in an analytical and human centered way. I seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
+                  Vernacular innovation and telling visual stories are my passion.<br>
+                  My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas, prototyping, testing and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
-                  Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, McVities Biscuits Nigeria and LAIF Awards.
+                  Some of my favourite projects involved my work for O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
                 <br>
                   My dream project is to travel the world building  vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
             </div>
 
             <div class="col-six tab-full right">
-                <h3>My Expertise.</h3>
+                <h3>My Skills.</h3>
 
                 <ul class="skill-bars">
+                    <li>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>Brand Strategy</strong>
+                    </li>
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
                     <strong>Brand Identity Design</strong>
@@ -187,20 +191,12 @@
                     <strong>Art Direction</strong>
                     </li>
                     <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>Product Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent75"><span>75%</span></div>
-                    <strong>Front End Web Development</strong>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>Web Development</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>Design Sprints</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>Cave Painting</strong>
+                    <strong>Design Thinking</strong>
                     </li>
                 </ul>
             </div>
@@ -218,8 +214,8 @@
                 <h3>Portfolio</h3>
                 <h1>My Latest Projects.</h1>
 
-                <p class="lead">“You can do anything you set your mind to.” <br>
-                                    Benjamin Franklin</p>
+                <p class="lead">“You might see me with my hoody up, I ain't leaving 'til I finish.” <br>
+                                    -NF</p>
             </div>
         </div>
 
@@ -313,8 +309,8 @@
             <div class="col-full">
                 <h3>My Thoughts</h3>
                 <h1>Latest From The Blog.</h1>
-                <p class="lead">“Wisdom is not a product of schooling but of the lifelong attempt to acquire it.” <br>
-                                            Albert Einstein</p>
+                <p class="lead">“Look at usual things with unusual eyes.”<br>
+                                            –Vico Magistretti</p>
             </div>
         </div>
 
