--- a/vernacular_design.html
+++ b/vernacular_design.html
@@ -157,7 +157,10 @@
 
 
                   <h3>Short History</h3>
-                 <p>You can find elements of minimalism in design, art and architecture in almost any time period. The style has an almost timelessness to it that makes designers keep coming back.
+                 <p>
+                    
+                    Connecting Brands with Millenials and Generation Z involves planning from the centre of culture, technology and design. As a brand strategist and digital creative, i love to innovate from the vernacular perspective of the tribes in
+                    
 
                   The roots of minimalism as we know it today can be traced to a three key periods: <br>
                   <figure>
