--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
             <div class="col-six tab-full left">
                 <p>
-                  Vernacular innovation and telling visual stories are my passion.<br>
+                  Vernacular innovation, design and telling visual stories are my passion.<br>
                   My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas, prototyping, testing and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
                   Some of my favourite projects involved my work for O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
@@ -234,7 +234,7 @@
                                 D3ntiti
                             </h3>
                             <p class="item-folio__cat">
-                                Identity, Strategy
+                                Brand Identity, Apparel and Marketing Design
                             </p>
                         </div>
 
@@ -259,7 +259,7 @@
                           Coupé
                             </h3>
                             <p class="item-folio__cat">
-                               IOS UI design
+                               APP UI Design
                             </p>
                         </div>
 
