--- a/index.html
+++ b/index.html
@@ -157,20 +157,21 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead"> Brand Strategist, Digital Creative &amp; Vernacular Innovator.</p>
+                <p class="lead"> Art Director &amp; Vernacular Innovator.</p>
             </div>
         </div>
 
         <div class="row about-content">
 
             <div class="col-six tab-full left">
+              <h3>My Bio.</h3>
                 <p>
-                  Vernacular innovation, design and telling visual stories are my passion.<br>
-                  My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas, prototyping, testing and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
+                  Vernacular innovation, creative design and telling visual stories are my passion.<br>
+                  My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems before designing solutions, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
                   Some of my favourite projects involved my work for O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
                 <br>
-                  My dream project is to travel the world building  vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
+                  My dream project is to travel the world building vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
             </div>
 
@@ -179,20 +180,20 @@
 
                 <ul class="skill-bars">
                     <li>
-                    <div class="progress percent80"><span>80%</span></div>
-                    <strong>Brand Strategy</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Brand Identity Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent85"><span>85%</span></div>
+                    <div class="progress percent95"><span>95%</span></div>
                     <strong>Art Direction</strong>
                     </li>
                     <li>
-                    <div class="progress percent80"><span>80%</span></div>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>UI/UX Design</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent85"><span>80%</span></div>
                     <strong>Web Development</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent80"><span>90%</span></div>
+                    <strong>Digital Marketing</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
@@ -276,7 +277,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                          <img src="images\portfolio\gallery\kitkat_ad.jpg" alt="KitKat Ad concept design by Dumebi Iwuchukwu" class="lazyload">
+                          <img src="images\portfolio\gallery\Taruwa Festival 2019.jpg" alt="Taruwa Festival 2019 identity and communication design by Dumebi Iwuchukwu" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
@@ -324,7 +325,7 @@
                             <a href="vernacular_design.html" target="_blank">Jan 20, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="vernacular_design.html" target="_blank">Designing Vernacular Solutions; Where ignorance is bliss</a></h2>
+                        <h2 class="h01"><a href="vernacular_design.html" target="_blank">Discovering Vernacular Solutions; Where ignorance is bliss</a></h2>
                         <p>
                           Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as..
                         </p>
