--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   Vernacular innovation, creative design and telling visual stories are my passion.<br>
                   My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems before designing solutions, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
-                  Some of my favourite projects involved my work for O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
+                  Some of my favourite projects involved my work for O2 Academy Lagos, D3ntiti apparels, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
                 <br>
                   My dream project is to travel the world building vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
@@ -327,11 +327,11 @@
 
                         <h2 class="h01"><a href="vernacular_design.html" target="_blank">Discovering Vernacular Solutions; Where ignorance is bliss</a></h2>
                         <p>
-                          Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as..
+                          An Arab Sheik, finding himself about to die, called his sons about him and said: "Divide my camels among you in the proportion of one-half of the herd to the eldest son...
                         </p>
 
                         <div class="blog-cat">
-                                <a href="blog.html" target="_blank">Minimalism</a><a href="blog.html" target="_blank">Design</a>
+                                <a href="blog.html" target="_blank">design thinking</a><a href="blog.html" target="_blank">Design</a>
                         </div>
 
 
