--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead"> Art Director &amp; Vernacular Innovator.</p>
+                <p class="lead"> Designer, Developer, Strategist.</p>
             </div>
         </div>
 
@@ -166,7 +166,7 @@
             <div class="col-six tab-full left">
               <h3>My Bio.</h3>
                 <p>
-                  Vernacular innovation, creative design and telling visual stories are my passion.<br>
+                  Human centered creative problem solving is my big passion.<br>
                   My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems before designing solutions, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
                   Some of my favourite projects involved my work for O2 Academy Lagos, D3ntiti apparels, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
@@ -181,23 +181,23 @@
                 <ul class="skill-bars">
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
-                    <strong>Art Direction</strong>
+                    <strong>Design</strong>
                     </li>
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
-                    <strong>UI/UX Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent85"><span>80%</span></div>
                     <strong>Web Development</strong>
                     </li>
                     <li>
-                    <div class="progress percent80"><span>90%</span></div>
-                    <strong>Digital Marketing</strong>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>Brand Strategy</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent95"><span>95%</span></div>
+                    <strong>Observation</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>Design Thinking</strong>
+                    <strong>Empathy</strong>
                     </li>
                 </ul>
             </div>
