--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead"> Designer, Developer, Strategist.</p>
+                <p class="lead"> Designer | Developer | Strategist.</p>
             </div>
         </div>
 
@@ -166,10 +166,10 @@
             <div class="col-six tab-full left">
               <h3>My Bio.</h3>
                 <p>
-                  Human centered creative problem solving is my big passion.<br>
-                  My medical imaging background helps me approach stategy and design in an analytical and human centered way. I first seek to understand the deep human needs behind the problems before designing solutions, to ensure the right problems are solved the right way, for the right people, at the right time.
+                Solving human problems is my passion.<br>
+                Experience from my medical imaging background has taught made me to approach each project like I would a patient, not with assumptions but with question aimed at gaining insight into the deeper problem beyond the obvious symptoms before exploring solutions, collaboratively with my the client and my team.
                 <br>
-                  Some of my favourite projects involved my work for O2 Academy Lagos, D3ntiti apparels, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
+                  Some of my favourite projects involved my work for O2 Academy Lagos, D3ntiti apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
                 <br>
                   My dream project is to travel the world building vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
@@ -193,7 +193,7 @@
                     </li>
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
-                    <strong>Observation</strong>
+                    <strong>Analytics</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
