--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>Dumebi Iwuchukwu</h1>
+                <h1>Dum3bi</h1>
                 <p class="lead"> Designer | Developer | Strategist.</p>
             </div>
         </div>
@@ -164,12 +164,15 @@
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-              <h3>My Bio.</h3>
+              <h3>Bio.</h3>
                 <p>
-                Solving human problems is my passion.<br>
-                Experience from my medical imaging background has taught made me to approach each project like I would a patient, not with assumptions but with question aimed at gaining insight into the deeper problem beyond the obvious symptoms before exploring solutions, collaboratively with my the client and my team.
+                Dumebi Iwuchukwu is an Art Director, Web Developer, Brand Strategist and most of all a Teacher.<br>
+                Dumebi is an Art Manager and Art Direction instructor at <a href="http://02academylagos.com"> Oxygen Academy Lagos</a> <br>
+                He is at his best when teaching, designing, coding and executing creative ideas.<br>
+                He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
-                  Some of my favourite projects involved my work for O2 Academy Lagos, D3ntiti apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa, McVities Biscuits Nigeria and Taruwa Festival 2019.
+                  I am presently an Art Direction Instructor at <a href="http://02academylagos.com"> Oxygen Academy Lagos</a> <br>
+                  Some of my favourite projects involved my work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
                 <br>
                   My dream project is to travel the world building vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
