updates and edits

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <h3>Bio.</h3>
                 <p>
                 Dumebi Iwuchukwu is an Art Director, Web Developer, Brand Strategist and most of all a Teacher.<br>
-                Dumebi is an Art Manager and Art Direction instructor at <a href="http://02academylagos.com"> Oxygen Academy Lagos</a> <br>
+                Dumebi is an Art Manager and Art Direction instructor at <a href="http://02academylagos.com" target="_blank">3 Oxygen Academy Lagos</a> <br>
                 He is at his best when teaching, designing, coding and executing creative ideas.<br>
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
