--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
                     </li>
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
+                    <strong>Art Direction</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent90"><span>90%</span></div>
                     <strong>Web Development</strong>
                     </li>
                     <li>
