updated thank you page

--- a/index.html
+++ b/index.html
@@ -165,15 +165,16 @@
             <div class="col-six tab-full left">
               <h3>Bio.</h3>
                 <p>
-                Dumebi Iwuchukwu is an Art Director, Web Developer, Brand Strategist and most of all a Teacher.<br>
-                Dumebi is an Art Manager and Art Direction instructor at <a href="http://02academylagos.com" target="_blank">Oxygen Academy Lagos</a> <br>
+                Dumebi Iwuchukwu is driven to develop solutions accessible to the bottom of the pyramid, fusing technology, design and culture in the areas of food, health, education and water supply.<br>
+                He is an Art Director, Web Developer, Brand Strategist and most of all a Teacher.<br>
+                Dumebi is presently the Art Manager and Art Direction Instructor at <a href="http://02academylagos.com" target="_blank">Oxygen Academy Lagos</a> where he teaches graphic design and art direction. <br>
                 He is at his best when teaching, designing, coding and executing creative ideas.<br>
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
-                  I am presently an Art Direction Instructor at <a href="http://02academylagos.com"> Oxygen Academy Lagos</a> <br>
-                  Some of my favourite projects involved my work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
-                <br>
-                  My dream project is to travel the world building vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
+
+                  Some of his favourite projects includes his work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
+
+
                 </p>
             </div>
 
@@ -199,7 +200,7 @@
                     </li>
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
-                    <strong>Analytics</strong>
+                    <strong>Teaching</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
