Art Director/Designer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <h3>Bio.</h3>
                 <p>
                 Dumebi Iwuchukwu is driven to develop solutions accessible to the bottom of the pyramid, fusing technology, design and culture in the areas of food, health, education and water supply.<br>
-                He is an Art Director, Web Developer, Brand Strategist and most of all a Teacher.<br>
+                He is a Designer, Web Developer, Brand Strategist and most of all a Teacher.<br>
                 Dumebi is presently the Art Manager and Art Direction Instructor at <a href="http://02academylagos.com" target="_blank">Oxygen Academy Lagos</a> where he teaches graphic design and art direction. <br>
                 He is at his best when teaching, designing, coding and executing creative ideas.<br>
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
