logo.png to logo.svg

--- a/My_YALI_Story.html
+++ b/My_YALI_Story.html
@@ -46,12 +46,12 @@
    <meta property="og:type" content="website">
    <meta property="og:title" content="the first series in my narration of my experience in Young African Leadership Initiave training held Early 2018 at ASCON Badagry Lagos, Nigeria">
    <meta property="og:description" content="the first series in my narration of my experience in Young African Leadership Initiave training held Early 2018 at ASCON Badagry Lagos, Nigeria.">
-   <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
    <meta property="og:image:alt" content="Dumebi's logo">
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Dumebi Iwuchukwu">
    <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
-   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
    <meta property="og:type" content="website">
 
@@ -89,7 +89,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -201,7 +201,7 @@
                 <div class="col-full">
 
                     <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
+                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
                     </div>
 
                     <ul class="footer-social">
