--- a/blog-single.html
+++ b/blog-single.html
@@ -34,12 +34,12 @@
    <meta property="og:type" content="website">
    <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
    <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
-   <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
    <meta property="og:image:alt" content="Dumebi's logo">
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Dumebi Iwuchukwu">
    <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
-   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
    <meta property="og:type" content="website">
 
@@ -76,7 +76,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -229,7 +229,7 @@ code {
                 <div class="col-full">
 
                     <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
+                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
                     </div>
 
                     <ul class="footer-social">
