--- a/vernacular_design.html
+++ b/vernacular_design.html
@@ -47,12 +47,12 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Dum3bi- Personal Blog of Dumebi Iwuchukwu Micheal.">
     <meta property="og:description" content="This is where I share my insights, findings and experiences.">
-    <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+    <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
     <meta property="og:image:alt" content="Dumebi's logo">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Dumebi Iwuchukwu">
     <meta name="twitter:description" content="This is where I share my insights, findings and experiences.">
-    <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+    <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
     <meta property="og:type" content="website">
 
@@ -88,7 +88,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -158,9 +158,9 @@
 
                   <h3>Short History</h3>
                  <p>
-                    
+
                     Connecting Brands with Millenials and Generation Z involves planning from the centre of culture, technology and design. As a brand strategist and digital creative, i love to innovate from the vernacular perspective of the tribes in
-                    
+
 
                   The roots of minimalism as we know it today can be traced to a three key periods: <br>
                   <figure>
@@ -248,7 +248,7 @@
                 <div class="col-full">
 
                     <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
+                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
                     </div>
 
                     <ul class="footer-social">
