--- a/blog.html
+++ b/blog.html
@@ -34,12 +34,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dum3bi- Personal Blog of Dumebi Iwuchukwu Micheal.">
   <meta property="og:description" content="This is where I share my insights, findings and experiences.">
-  <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+  <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
   <meta name="twitter:description" content="This is where I share my insights, findings and experiences.">
-  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
   <meta property="og:type" content="website">
 
@@ -76,7 +76,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -115,7 +115,7 @@
                         Designing Vernacular Solutions; Where ignorance is bliss
                     </a>
                 </h1>
-                
+
                 <p>
                     <a href="vernacular_design.html" class="btn btn--stroke page-header__btn" target="_blank">Read More</a>
                 </p>
@@ -247,7 +247,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
+                    <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
                 </div>
 
                 <ul class="footer-social">
