--- a/styles.html
+++ b/styles.html
@@ -51,7 +51,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -593,7 +593,7 @@
                 <div class="col-full">
 
                     <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
+                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
                     </div>
 
                     <ul class="footer-social">
